--- a/src/main/resources/static/show4.html
+++ b/src/main/resources/static/show4.html
@@ -6,7 +6,6 @@
     <!--改变tomcat图标-->
     <link rel="shortcut icon"
           href="images/icon.gif" type="image/x-icon" />
-    <!--改变tomcat图标-->
     <link rel="stylesheet" type="text/css" href="layui/css/layui.css"/>
     <script src="layui/layui.js" type="text/javascript" charset="utf-8"></script>
     <style type="text/css">
@@ -117,10 +116,11 @@
                     };
             return function(table, name) {
                 if (!table.nodeType) {
-                    table = document.getElementById(table)
+                    table = document.querySelector('[lay-id="ta"] .layui-table-header table').innerHTML+
+                            document.querySelector('[lay-id="ta"] .layui-table-body table').innerHTML;
                 }
                 // 获取表单的名字和表单查询的内容
-                var ctx = {worksheet: name || 'Worksheet', table: table.innerHTML};
+                var ctx = {worksheet: name || 'Worksheet', table: table};
                 // format()函数：通过格式操作使任意类型的数据转换成一个字符串
                 // base64()：进行编码
                 window.location.href = uri + base64(format(template, ctx))
